Git_WGBH_QC/src/objects/Scorecard_Online__c.object
<CustomObject>
    <description>Temporary Object so that Ken can get his online reports</description>
    <fields>
        <fullName>Average_Daily_Pageviews__c</fullName>
        <label>Average Daily Pageviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Visitors__c</fullName>
        <label>Average Daily Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Visits__c</fullName>
        <label>Average Daily Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_time_on_site__c</fullName>
        <label>Average Time On Site</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contests_Codes__c</fullName>
        <label>Contests/Codes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2__c</fullName>
        <formula>IF(
AND(
MONTH(TODAY())&lt;9,MONTH(date__c)&gt;=9
),
DATE(YEAR(TODAY())-1,MONTH(date__c),DAY(date__c)), 
DATE(YEAR(TODAY()),MONTH(date__c),DAY(date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <externalId>true</externalId>
        <label>KEY</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <description>Date for Y/Y comps</description>
        <formula>CASE(
MONTH( date__c ) ,
1, &quot;05 January&quot;,
2, &quot;06 February&quot;,
3, &quot;07 March&quot;,
4, &quot;08 April&quot;,
5, &quot;09 May&quot;,
6, &quot;10 June&quot;,
7, &quot;11 July&quot;,
8, &quot;12 August&quot;,
9, &quot;01 September&quot;,
10, &quot;02 October&quot;,
11, &quot;03 November&quot;,
12, &quot;04 December&quot;,
&quot;Invalid month&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Ticket_Sales__c</fullName>
        <label>Online Ticket Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_registrations__c</fullName>
        <label>Site Registrations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Online_Revenue__c</fullName>
        <label>Total Online Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bounce_rate__c</fullName>
        <label>Bounce Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email_signups__c</fullName>
        <label>Email Signups</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>page_views__c</fullName>
        <label>Page Views</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>site_visits__c</fullName>
        <label>Site Visits</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_visitors__c</fullName>
        <label>Unique Visitors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard&gt;Online</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMR-{0000}</displayFormat>
        <label>Scorecard&gt;Online Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard&gt;Online</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>